# linting-sql-in-python

./: .sqlfluff  README.md  hello.py  pyproject.toml  sql_query_builder.py
dataform/: cross_repo_reference.sqlx  dim_customers.sqlx  pre_post_operations.sqlx  stg_customers.sqlx
sql_templates/: complex_report.sql  create_user_table.sql  insert_user.sql  select_users.sql  update_user_status.sql
