[project]
name = "linting-sql-in-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.6",
    "sqlfluff-templater-dataform>=0.1.6",
    "sqlfluff>=3.4.0",
]

[tool.sqlfluff.core]
dialect = "bigquery"
max_line_length = 120
templater = "dataform"
sql_file_exts = ".sql,.sql.j2,.dml,.ddl,.sqlx"
rules = "all"
exclude_rules = "LT08, LT14"
large_file_skip_byte_limit = 20000

[tool.sqlfluff.indentation]
tab_space_size = 4
indented_joins = false
indented_using_on = true
template_blocks_indent = false

[tool.sqlfluff.layout.type.comma]
line_position = "leading"

[tool.sqlfluff.templater]
unwrap_wrapped_queries = true

[tool.sqlfluff.templater.jinja]
apply_dbt_builtins = true

[tool.sqlfluff.templater.jinja.context]
table_name = "my_table"
username_length = 32
users = [{"user.username" = "fido", "user.email" = "ff", "user.status" = "ok"}, {"user.username" = "karel", "user.email" = "kk", "user.status" = "left"}]
status = "ok"
user_id = 123
new_status = "ok"
user_ids = [1, 2, 3]
users_table = "users"
orders_table = "orders"
date_filter = "2025-05-25"
min_orders = 1
limit = 100
high_value_threshold = 1000
medium_value_threshold = 500

# For rule specific configuration, use dots between the names exactly
# as you would in .sqlfluff. In the background, SQLFluff will unpack the
# configuration paths accordingly.
[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "lower"
[tool.sqlfluff.rules.capitalisation.identifiers]
extended_capitalisation_policy = "lower"
[tool.sqlfluff.rules.capitalisation.functions]
extended_capitalisation_policy = "lower"
[tool.sqlfluff.rules.capitalisation.literals]
capitalisation_policy = "lower"
[tool.sqlfluff.rules.capitalisation.types]
extended_capitalisation_policy = "lower"
[tool.sqlfluff.rules.convention.count_rows]
prefer_count_1 = true
